--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="navbar">
-            <img src="/image/logo.png">
+            <img src="image/logo.png">
             <ul>
                 <li>
                     <a href="#">Home</a>
@@ -39,9 +39,9 @@
             </div>
             <div class="right-col">
                 <p>Click here to listen Music</p>
-                <img src="/image/play.png" id="icon">
+                <img src="image/play.png" id="icon">
             </div>
-            <audio src="/image/song.mp3" id="mysong"></audio>
+            <audio src="image/song.mp3" id="mysong"></audio>
         </div>
 
     </div>
